--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,8 +1,8 @@
 // Required Core Stylesheet
-// @import "node_modules/@glidejs/glide/src/assets/sass/glide.core";
+@import "node_modules/@glidejs/glide/src/assets/sass/glide.core";
 
 // Optional Theme Stylesheet
-// @import "node_modules/@glidejs/glide/src/assets/sass/glide.theme";
+@import "node_modules/@glidejs/glide/src/assets/sass/glide.theme";
 
 @import "node_modules/plyr/src/sass/plyr";
 
