--- a/src/templates/home/sections/art-projects/art-projects-images-collection.hbs
+++ b/src/templates/home/sections/art-projects/art-projects-images-collection.hbs
@@ -3,17 +3,18 @@
     <!-- don't forget the data-index attr, or weird flashing will happen on scroll -->
         <li data-index="{{@index}}"
             class="glide__slide
-                    art-project__type--{{ artProjectType }}">
+                    art-project__type--{{ artProjectType }}"
+            style="background-image: url('{{ artProjectImagePath }}'); ">
 
-            <img class="slide__image js-slide__image"
-                src=".{{ artProjectImagePath }}">
+            {{!-- <img class="slide__image js-slide__image"
+                src=".{{ artProjectImagePath }}"> --}}
 {{!--             <h2 class="slide__description">
 
                 <span class="slide__tag tag--{{ artProjectType }}"></span>
             </h2> --}}
-
+{{!--
             <a href="#" class="slide__title js-slide__title">
-                {{!-- {{#ifEquals artProjectType "1"}}
+                {{#ifEquals artProjectType "1"}}
                     <i class="slide__title-icon
                                 slide__title-icon--circle
                                 material-icons
@@ -23,9 +24,9 @@
                             slide__title-icon--square
                             material-icons
                             material__icon--square">stop</i>
-                {{/ifEquals}} --}}
+                {{/ifEquals}}
                 {{ artProjectTitle }}
-            </a>
+            </a> --}}
 
             {{!-- <div class="slide__ tag tag--{{ artProjectType }}"></div> --}}
 
