--- a/src/scss/partials/_glide.scss
+++ b/src/scss/partials/_glide.scss
@@ -1,8 +1,8 @@
 
 .glide__slide {
-    position: relative;
+    /* position: relative; */
     /* width: 200px; */
-    /* height: 400px; */
+    height: 400px;
     /* min-width: 300px; */
 
     /* overflow: hidden; */
