cleanup. moved console output into callback

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,10 +1,7 @@
-// Required Core Stylesheet
-@import "node_modules/@glidejs/glide/src/assets/sass/glide.core";
+@import 'node_modules/@glidejs/glide/src/assets/sass/glide.core';
+@import 'node_modules/@glidejs/glide/src/assets/sass/glide.theme';
 
-// Optional Theme Stylesheet
-@import "node_modules/@glidejs/glide/src/assets/sass/glide.theme";
-
-@import "node_modules/plyr/src/sass/plyr";
+@import 'node_modules/plyr/src/sass/plyr';
 
 @import 'partials/mq';
 @import 'partials/mq-debugger';
@@ -51,8 +48,3 @@ body {
     background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAOklEQVQoU43MSwoAMAgD0eT+h7ZYaOlHo7N+DNHL2HAGgBWcyGcKbqTghTL4oQiG6IUpOqFEC5bI4QD8PAoKd9j4XwAAAABJRU5ErkJggg==);
     mix-blend-mode: soft-light;
 }
-
-// .glide__slide {
-//     background-color: lightgray;
-//     height:60vh;
-// }
