--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -28,7 +28,7 @@ body {
     // dont show, until animation is completed.
 
     // disabling this doesnt seem to have a negative effect
-    overflow: visible !important;
+    // overflow: visible !important;
 }
 
 // .fp-tableCell {
