--- a/src/scss/partials/_glide.scss
+++ b/src/scss/partials/_glide.scss
@@ -1,9 +1,26 @@
+/* .glide--art-projects {
+    // margin-top: 10%;
+    display: flex;
+    align-items: center;
+} */
+
+.glide__slides {
+    height: 60vh;
+    @include mq('md') { height: 400px; }
+    @include mq('lg') { height: 400px; }
+    @include mq('xl') { height: 350px; }
+    // @include mq('xxl') { height: 450px; }
+
+    overflow: visible;
+}
+
 .glide__slide {
     /* position: relative; */
     /* overflow: hidden; */
     /* width: 200px; */
     /* min-width: 300px; */
     height: 400px;
+    opacity: 0.6;
 
     /* prevents white flash when using arrows */
     /* https://github.com/glidejs/glide/issues/269 */
@@ -23,6 +40,8 @@
     object-fit: cover;
     width: 100%;
     height: 100%;
+        transition: opacity 0.1s ease-in-out;
+
 }
 
 /* prevents flash and scroll snap jumps
@@ -30,28 +49,30 @@ https://github.com/glidejs/glide/issues/269*/
 .glide__slide--active {
     position: relative;
     z-index: 1;
+    opacity: 1;
 }
 
 .glide__arrows {
-    display: flex;
     position: absolute;
-    bottom: -13vh;
-    right: 0;
+    width: 100vw;
+    display: flex;
+    cursor: default;
 }
 
 .glide__arrow {
-    position: static;
+    position: relative;
     top: auto;
-    left: auto;
-    right: auto;
-    margin: 1rem;
-    padding: 0;
+    padding: 2rem;
+    // margin: 3rem 1rem;
     transform: none;
     box-shadow: none;
     text-shadow: none;
     border-radius: 0;
     border: 0;
-    color: #82C345;
+    color: $palette--green;
     line-height: normal;
-    i { width: 20px !important; }
-}
+    opacity: 0.9;
+
+
+    i { font-size: 2.25rem; }
+ }
