uncommented fullpage init and intro section. extracted glide config into module. moved fullpage license key to file. excluded from repo. “ to ‘. made utils module. added overflow to body

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -26,9 +26,7 @@ body {
     // when scrolling to a section that has a gradient applied,
     // layers underneath it, whether text or images,
     // dont show, until animation is completed.
-
-    // disabling this doesnt seem to have a negative effect
-    // overflow: visible !important;
+    overflow: visible !important;
 }
 
 // .fp-tableCell {
