--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -26,7 +26,7 @@ body {
     // when scrolling to a section that has a gradient applied,
     // layers underneath it, whether text or images,
     // dont show, until animation is completed.
-    overflow: visible !important;
+    // overflow: visible !important;
 }
 
 // .fp-tableCell {
